fixed the colours on mobile size

--- a/app/assets/stylesheets/about/_about_main_card.scss
+++ b/app/assets/stylesheets/about/_about_main_card.scss
@@ -46,7 +46,7 @@ overflow-y: scroll;
 @media screen and (max-width: 576px) {
   .about_main_card {
     position: relative;
-    background-image: linear-gradient(to right, $light-blue, $light-green);
+    background-image: linear-gradient(to right, $light-blue, $light-green, $light-blue);
     height: 100%;
     width: 100%;
     display: flex;
