--- a/app/assets/stylesheets/about/_container_word_pdf.scss
+++ b/app/assets/stylesheets/about/_container_word_pdf.scss
@@ -46,7 +46,7 @@
 
   .word-doc-card {
     position: relative;
-    background-image: linear-gradient(to right, $light-blue, $light-green);
+    background-image: linear-gradient(to right, $light-blue, $light-green, $light-blue);
     height: auto;
     width: 100%;
     display: flex;
