--- a/app/assets/stylesheets/about/_diploma_card.scss
+++ b/app/assets/stylesheets/about/_diploma_card.scss
@@ -43,7 +43,7 @@
 @media screen and (max-width: 576px) {
   .diploma-card {
     position: relative;
-    background-image: linear-gradient(to right, $light-green, $light-blue);
+    background-image: linear-gradient(to right, $light-blue, $light-green, $light-blue);
     height: 100%;
     width: 100%;
     display: flex;
