--- a/app/assets/stylesheets/home/_course.scss
+++ b/app/assets/stylesheets/home/_course.scss
@@ -38,7 +38,7 @@
     margin-top: 5%;
     border-radius: 15px;
     border: 2px solid $black;
-    background-image: linear-gradient(to right, $light-green, $light-blue);
+    background-image: linear-gradient(to right, $light-blue, $light-green, $light-blue);
     display: flex;
     position: relative;
     flex-flow: row wrap;
