--- a/app/assets/stylesheets/home/_experince.scss
+++ b/app/assets/stylesheets/home/_experince.scss
@@ -51,7 +51,7 @@
     height: 100%;
     border-radius: 15px;
     border: 2px solid #0E0000;
-    background-image: linear-gradient(to right, #4e91f4, #1EDD88);
+    background-image: linear-gradient(to right, $light-blue, $light-green, $light-blue);
     display: flex;
     position: relative;
     margin-bottom: 20%;
