--- a/app/assets/stylesheets/home/_photo_card_home.scss
+++ b/app/assets/stylesheets/home/_photo_card_home.scss
@@ -40,7 +40,7 @@
 @media screen and (max-width: 576px) {
   .photo_card_home {
     position: relative;
-    background-image: linear-gradient(to right, $light-green, $light-blue);
+    background-image: linear-gradient(to right, $light-blue, $light-green, $light-blue);
     width: 100%;
     height: 100%;
     display: flex;
